k8s/hostname-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  labels:
    app: hostname
  name: hostname-dr
  namespace: default
spec:
  host: hostname.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: X-UserId
